# MIR

./: .gitignore  .gitignore_private  .gitignore_public  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docs.yml  tests.yml
deformation_regularizer/: __init__.py
docs/: Makefile  api.rst  brain_template_example.rst  conf.py  index.rst  quick_start.rst  quick_start_brain_registration.rst  quick_start_ixi_benchmarking.rst
docs/_static/: custom.css
docs/api/: MIR.accuracy_measures.acc_measures.rst  MIR.deformation_regularizer.LocalRegularizers.rst  MIR.image_similarity.CompositeRecon.rst  MIR.image_similarity.Dice.rst  MIR.image_similarity.MIND_SSC.rst  MIR.image_similarity.Mutual_Information.rst  MIR.image_similarity.NCC.rst  MIR.image_similarity.SSIM.rst  MIR.models.HyperMorph.rst  MIR.models.HyperTransMorph.rst  MIR.models.HyperVFA.rst  MIR.models.MultiMorph.rst  MIR.models.Segmentation_Heads.rst  MIR.models.Swin_Transformer.rst  MIR.models.Synthesis_Heads.rst  MIR.models.TransMorph.rst  MIR.models.TransVFA.rst  MIR.models.VoxelMorph.rst  MIR.models.affine_reg.rst  MIR.models.configs_VFA.rst  MIR.models.convexAdam.apply_convex.rst  MIR.models.convexAdam.convex_adam_MIND.rst  MIR.models.convexAdam.convex_adam_VFA.rst  MIR.models.convexAdam.convex_adam_utils.rst  MIR.models.convexAdam.rst  MIR.models.fireants.dispatcher.rst  MIR.models.fireants.interpolator.rst  MIR.models.fireants.io.transform.rst  MIR.models.fireants.losses.mse.rst  MIR.models.fireants.losses.rst  MIR.models.fireants.registration.affine.rst  MIR.models.fireants.registration.deformablemixin.rst  MIR.models.fireants.registration.greedy_SPR.rst  MIR.models.fireants.registration.moments.rst  MIR.models.fireants.registration.rigid.rst  MIR.models.fireants.registration.rst  MIR.models.fireants.registration.syn_SPR.rst  MIR.models.fireants.rst  MIR.models.fireants.utils.globals.rst  MIR.models.fireants.utils.imageutils.rst  (+8 more)
docs/models/: backbones_and_heads.rst  deedsbcv.rst  hypermorph.rst  index.rst  transmorph.rst  voxelmorph.rst
image_similarity/: NCC.py
models/: TransMorph.py  __init__.py  atlas_builder.py
models/convexAdam/: __init__.py  apply_convex.py  configs_ConvexAdam_MIND.py  convex_adam_translation.py
src/MIR/: __init__.py  data_augmentation.py  l2r_io.py  label_reference.py  pretrained_wts.py
src/MIR.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_model_init.py  test_registration_utils.py
tutorials/: README.md
tutorials/AutoPET/: autopet_metadata_summary.md  summarize_autopet_metadata.py
tutorials/FireANTs_SPR/: db.FireANTs_SPR.db  train_FireANTsSPR_AtlasReg.py
tutorials/HECKTOR25/: build_template.py  gen_seg_atlas_STEP2.py  hecktor25_clinical_summary.md  preprocessing.py  register_atlases.py  summarize_hecktor_clinical_demographics.py  train_VFA_AtlasBuild_STEP1.py
tutorials/IPEN_registration/: infer_VFA.py  infer_synthstrip.py
tutorials/IXI_HyperMorph/: train_HyperMorph.py
tutorials/IXI_HyperTransMorph/: train_HyperTransMorph.py
tutorials/IXI_SITReg/: README.md
tutorials/IXI_TransMorphSPR/: train_TransMorphSPR_beta.py  (+1 more)
utils/: other_utils.py  segmentation_utils.py
(+642 files in other folders)
