[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MIR"           # lowercase package name
version = "0.0.1"
description = "Medical-image registration toolkit"
authors = [{ name = "Junyu Chen", email = "jchen245@jhmi.edu" }]
readme = "README.md"
requires-python = ">=3.8"

# Dependencies
dependencies = [
	"antspyx",
	"einops==0.8.1",
	"matplotlib==3.7.3",
	"ml_collections==0.1.1",
	"nibabel==5.3.2",
	"numpy==1.24.4",
	"pymedio==0.2.5",
	"scipy==1.15.3",
	"seaborn==0.11.0",
	"SimpleITK==2.5.0",
	"statsmodels==0.14.0",
	"timm==0.9.10",
	"natsort",
	"torch==2.0.1+cu118",
]

[project.optional-dependencies]
dev = ["black", "pytest"]

[tool.setuptools]
package-dir = {"" = "src"}    # <-- tell it that your packages live in src/

[tool.setuptools.package-data]
# this says: in the src/MIR/utils folder, include any .txt
"MIR.utils" = ["FreeSurfer_label_info.txt"]

# either explicitly list your package
# packages = ["MIR"]
# or use find:
[tool.setuptools.packages.find]
where  = ["src"]             # <-- look under src/
include = ["MIR*",] 